frame/support/test/tests/derive_no_bound_ui/default_union.rs
#[derive(frame_support::DefaultNoBound)]
union Foo {
	field1: u32,
	field2: (),
}

fn main() {}
